add: code coverage measurement and fix sonarqube